test/Fail/TranspErasedPi-rhs.err
TranspErasedPi-rhs.agda:25.82-83: error: [VariableIsErased]
Variable x is declared erased, so it cannot be used here
when checking that the expression x has type outS (A (i ∨ ~ i0))
